Put finishing touches in notes and fixed header to wrap

--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
   padding: 0;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 ul {
   list-style: none;
   display: flex;
@@ -20,8 +25,6 @@ ul {
 
 header {
   display: flex;
-  position: relative;
-  flex-direction: row;
   padding: 10px;
   margin-left: 0;
   background-color: rgba(49, 52, 61, 1);
@@ -30,6 +33,7 @@ header {
 }
 
 header h1 {
+  display: flex;
   margin: 0;
   margin-right: auto;
   background-color: rgba(146, 204, 206, 1);
@@ -43,9 +47,7 @@ header h1 {
 
 nav ul {
   display: flex;
-  flex-direction: row;
-  align-items: right;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   text-align: left;
   padding: 10px;
   margin-left: auto;
@@ -83,7 +85,8 @@ a {
   height: 200px;
   justify-content: space-around;
 }
-/* Container is the outside of h2 */
+
+/* Specific to work images */
 
 .beach {
   display: flex;
@@ -95,6 +98,8 @@ a {
   margin: 10px;
 }
 
+/* /* Specific to work images */
+
 .four {
   display: flex;
   flex-wrap: wrap;
@@ -104,9 +109,14 @@ a {
   flex-grow: 1;
   margin: 10px;
 }
+
+/* /* Specific to work images */
+
 .box {
   position: relative;
 }
+
+/* /* Specific to work images */
 
 .beach-img {
   width: 100%;
@@ -114,6 +124,9 @@ a {
   object-fit: cover;
   opacity: 0.5;
 }
+
+/* /* Specific to work images */
+
 .four-img {
   width: 100%;
   height: 100%;
@@ -121,10 +134,13 @@ a {
   opacity: 0.5;
 }
 
+/* /* Specific to work images */
 img:hover {
   cursor: pointer;
   opacity: 1;
 }
+
+/* /* Specific to work images */
 
 .subtitle {
   position: absolute;
@@ -134,6 +150,7 @@ img:hover {
   flex-basis: auto;
 }
 
+/* /* Specific to work images */
 .subtitle h3 {
   font-size: 200%;
   font-weight: bold;
@@ -185,4 +202,14 @@ img:hover {
   top: 250px;
   padding: 7px;
   font-size: 2rem;
+}
+/* Telling Screen to adjust at 768px */
+@media screen and (max-width: 768px) {
+  header,
+  main {
+    flex-direction: column;
+  }
+  section {
+    padding-right: 0;
+  }
 }
